--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^25.1.0",
+    "jest-puppeteer": "^4.4.0",
     "puppeteer": "^2.1.1"
   }
 }
